--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        </div>
 
        <div class="left-section">
-         <img src="https://static.wikia.nocookie.net/villains/images/0/0f/Darthvader3.png/revision/latest?cb=20190301163736" 
+         <img src="https://www.pngmart.com/files/12/Star-Wars-Darth-Vader-Transparent-Background.png" 
          alt="darthvader"
          width="100%">   
        </div>
